// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyJobAndExchangeDetailComponent should render the exchange job detail panel when the selected company job is associated 1`] = `
<pf-company-job-and-exchange-detail
  allSubscriptions={[Function Subscription]}
  exchangeId="null"
  jdmDescriptionIds$={[Function Store]}
  jdmDescriptionLoading$={[Function Store]}
  jdmDescriptionLoadingError$={[Function Store]}
  mappedExchangeJob$={[Function Store]}
  mappedExchangeJobsLoading$={[Function Store]}
  mappedExchangeJobsLoadingError$={[Function Store]}
  mappedExchangeJobsLoadingSuccess$={[Function Store]}
  savingAssociation$={[Function Store]}
  savingAssociationError$={[Function Store]}
  selectedCompanyJob="null"
  selectedCompanyJob$={[Function Observable]}
  store={[Function Store]}
>
  <section
    class="card mb-2"
  >
    <div
      class="card-header"
    >
      <h6
        class="text-uppercase mb-0"
      >
        Company Job and Exchange
      </h6>
    </div>
    <a
      class="close-panel mr-3 mt-1"
      href="javascript:void(0)"
      title="Close"
    >
      <fa-icon
        icon="times"
      />
    </a>
    <div
      class="d-flex"
    >
      <div
        class="w-50 p-3"
      >
        <pf-company-job-detail />
      </div>
      <span
        class="bg-image"
      >
        <fa-icon
          icon="exchange"
        />
      </span>
      <div
        class="w-50 p-3"
      >
        
        <pf-exchange-job-detail />
        
      </div>
    </div>
  </section>
</pf-company-job-and-exchange-detail>
`;

exports[`CompanyJobAndExchangeDetailComponent should render the exchange job search panel when the selected company job is not associated 1`] = `
<pf-company-job-and-exchange-detail
  allSubscriptions={[Function Subscription]}
  exchangeId="null"
  jdmDescriptionIds$={[Function Store]}
  jdmDescriptionLoading$={[Function Store]}
  jdmDescriptionLoadingError$={[Function Store]}
  mappedExchangeJob$={[Function Store]}
  mappedExchangeJobsLoading$={[Function Store]}
  mappedExchangeJobsLoadingError$={[Function Store]}
  mappedExchangeJobsLoadingSuccess$={[Function Store]}
  savingAssociation$={[Function Store]}
  savingAssociationError$={[Function Store]}
  selectedCompanyJob="null"
  selectedCompanyJob$={[Function Observable]}
  store={[Function Store]}
>
  <section
    class="card mb-2"
  >
    <div
      class="card-header"
    >
      <h6
        class="text-uppercase mb-0"
      >
        Company Job and Exchange
      </h6>
    </div>
    <a
      class="close-panel mr-3 mt-1"
      href="javascript:void(0)"
      title="Close"
    >
      <fa-icon
        icon="times"
      />
    </a>
    <div
      class="d-flex"
    >
      <div
        class="w-50 p-3"
      >
        <pf-company-job-detail />
      </div>
      <span
        class="bg-image"
      >
        <fa-icon
          icon="exchange"
        />
      </span>
      <div
        class="w-50 p-3"
      >
        
        <pf-exchange-job-search />
        
      </div>
    </div>
  </section>
</pf-company-job-and-exchange-detail>
`;
